fix: add patch to fix x-overflow on 320px in main page

--- a/pages/main/styles/backstage.css
+++ b/pages/main/styles/backstage.css
@@ -114,6 +114,7 @@ section.backstage{
         padding-top: 40px;
         padding-left: 10px;
         padding-right: 10px;
+        overflow-x: hidden;
     }
     .backstage-row{
         width: 300px;
